--- a/hetzner_server_management/configure_wireguard/tasks/wireguard_server.yml
+++ b/hetzner_server_management/configure_wireguard/tasks/wireguard_server.yml
@@ -9,7 +9,7 @@
   package:
     name:
       - wireguard
-    state: latest
+    state: present
 
 - name: Gather instance facts
   ansible.builtin.setup:
