--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         run: pip3 install ansible molecule[docker] docker yamllint ansible-lint
 
       - name: Run Molecule tests
+        working-directory: ./hetzner_server_management
         run: molecule lint
         env:
           PY_COLORS: '1'
@@ -32,6 +33,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v2
