--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -1,6 +1,6 @@
 ---
 - name: Parameters taken from Discord input
-  set_fact:
+  ansible.builtin.set_fact:
     # Attention: In Discord you can specify the Server type (vpn or minecraft)
     # which will be the name in the hetzner cloud console
     server_name: "{{ type }}"
@@ -21,17 +21,17 @@
     force: yes
 
 - name: Gather server info before potential server creation
-  hcloud_server_info:
+  hetzner.hcloud.hcloud_server_info:
     name: "{{ server_name }}"  # vpn or minecraft
     api_token: "{{ hetzner_token }}"
   register: server_info
 
 - name: Print server info before potential server creation
-  debug:
+  ansible.builtin.debug:
     var: server_info
 
 - name: Vpn with location not in the US
-  set_fact:
+  ansible.builtin.set_fact:
     server_type: cx11  # cpx11, cpx21, cx11, cpx41
     server_firewall: VpnFirewall
     server_ssh_key: vpn_ssh_key
@@ -42,7 +42,7 @@
 # you have to choose cpx11 here,
 # because hetzner doesn't offer the cx11 in the US
 - name: Vpn server with location in the US
-  set_fact:
+  ansible.builtin.set_fact:
     server_type: cpx11  # cpx11, cpx21, cx11, cpx41
     server_firewall: VpnFirewall
     server_ssh_key: vpn_ssh_key
@@ -51,14 +51,14 @@
     or (server_location == "hil")
 
 - name: Minecraft server
-  set_fact:
+  ansible.builtin.set_fact:
     server_type: cpx21  # cpx11, cpx21, cx11, cpx41
     server_firewall: MinecraftFirewall
     server_ssh_key: minecraft_ssh_key
   when: server_name == "minecraft"
 
 - name: Print server configuration
-  debug:
+  ansible.builtin.debug:
     msg:
       - "Server type: {{ server_name }}"
       - "Server location: {{ server_location }}"
@@ -67,6 +67,7 @@
       - "Server ssh-key: {{ server_ssh_key }}"
 
 - name: Create firewall and ssh key for vpn server
+  when: server_name == "vpn"
   block:
     - name: Create a firewall for vpn server
       hetzner.hcloud.hcloud_firewall:
@@ -101,9 +102,10 @@
         type: ed25519
 
     - name: Read in vpn ssh key
-      shell: |
+      ansible.builtin.shell: |
         cat /root/.ssh/vpn_ssh_key.pub
       register: public_vpn_ssh_key
+      changed_when: false
 
     - name: Delete ssh key for vpn server
       hetzner.hcloud.hcloud_ssh_key:
@@ -117,9 +119,9 @@
         api_token: "{{ hetzner_token }}"
         public_key: "{{ public_vpn_ssh_key.stdout }}"
         state: present
-  when: server_name == "vpn"
 
 - name: Create firewall and ssh key for minecraft server
+  when: server_name == "minecraft"
   block:
     - name: Create a firewall for minecraft server
       hetzner.hcloud.hcloud_firewall:
@@ -154,9 +156,10 @@
         type: ed25519
 
     - name: Read in minecraft ssh key
-      shell: |
+      ansible.builtin.shell: |
         cat /root/.ssh/minecraft_ssh_key.pub
       register: public_minecraft_ssh_key
+      changed_when: false
 
     - name: Delete ssh key for minecraft server
       hetzner.hcloud.hcloud_ssh_key:
@@ -170,7 +173,6 @@
         api_token: "{{ hetzner_token }}"
         public_key: "{{ public_minecraft_ssh_key.stdout }}"
         state: present
-  when: server_name == "minecraft"
 
 - name: Delete already existing server when the location differs
   hetzner.hcloud.hcloud_server:
@@ -195,19 +197,19 @@
     state: present
 
 - name: Gather server info after server creation
-  hcloud_server_info:
+  hetzner.hcloud.hcloud_server_info:
     name: "{{ server_name }}"  # vpn or minecraft
     api_token: "{{ hetzner_token }}"
   register: server_info_after_creation
 
 - name: Print server info after server creation
-  debug:
+  ansible.builtin.debug:
     var: server_info_after_creation
 
 # the script duck.sh updates the "current ip" entry in your duckdns.org account
 - name: Update ip address for duckdns {{ vpn_server_domain }}.duckdns.org
     -> {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}
-  shell:  # noqa 305
+  ansible.builtin.shell:  # noqa 305
     "/usr/src/KBKM-Bot/hetzner_server_management/create_server/scripts/duck.sh
     {{ vpn_server_domain }}
     {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}"
@@ -216,7 +218,7 @@
 # the script duck.sh updates the "current ip" entry in your duckdns.org account
 - name: Update ip address for duckdns {{ minecraft_server_domain }}.duckdns.org
     -> {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}
-  shell:  # noqa 305
+  ansible.builtin.shell:  # noqa 305
     "/usr/src/KBKM-Bot/hetzner_server_management/create_server/scripts/duck.sh
     {{ minecraft_server_domain }}
     {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}"
@@ -225,7 +227,7 @@
 # For more info look at
 # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/wait_for_module.html#parameter-timeout
 - name: Check every 3 second if ssh is available (maximal 300 seconds)
-  wait_for:
+  ansible.builtin.wait_for:
     port: 22
     host: '{{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}'
     search_regex: OpenSSH
