--- a/hetzner_server_management/molecule/default/converge.yml
+++ b/hetzner_server_management/molecule/default/converge.yml
@@ -1,27 +1,29 @@
 ---
-- hosts: localhost
+- name: Copy files to container
+  hosts: localhost
   vars_files:
     - ../../create_server/vars/vars.yml
   gather_facts: no
   tasks:
     #  - name: copy ssh_config to container
-    #  shell: docker cp
+    #  ansible.builtin.shell: docker cp
     #  /home/tobi/KBKM-Bot/hetzner_server_management/molecule/default/ssh_config
     #  molecule-test-bot:/etc/ssh/
     #  register: res_cp_command_ssh_config
     #  changed_when: false
-    - name: copy duck.sh to container
-      shell:  # noqa 305
+    - name: Copy duck.sh to container
+      ansible.builtin.shell:  # noqa 305
         docker cp
         /home/tobi/KBKM-Bot/hetzner_server_management/molecule/default/duck.sh
         molecule-test-bot:/home
       changed_when: false
 
-- hosts: molecule-test-bot
+- name: Converge
+  hosts: molecule-test-bot
   gather_facts: no
   tasks:
     - name: Parameters taken from Discord input
-      set_fact:
+      ansible.builtin.set_fact:
         # Attention: In Discord you can specify the Server type
         # (vpn or minecraft) which will be the name in the hetzner cloud console
         server_name: "{{ type }}"
@@ -33,17 +35,17 @@
           "{{ lookup('ansible.builtin.env', 'duckdnsDomainMINECRAFT') }}"
 
     - name: Gather server info before potential server creation
-      hcloud_server_info:
+      hetzner.hcloud.hcloud_server_info:
         name: "{{ server_name }}"  # vpn or minecraft
         api_token: "{{ hetzner_token }}"
       register: server_info
 
     - name: Print server info before potential server creation
-      debug:
+      ansible.builtin.debug:
         var: server_info
 
     - name: Vpn with location not in the US
-      set_fact:
+      ansible.builtin.set_fact:
         server_type: cx11  # cpx11, cpx21, cx11, cpx41
         server_firewall: VpnFirewall
         server_ssh_key: vpn_ssh_key
@@ -54,7 +56,7 @@
     # you have to choose cpx11 here,
     # because hetzner doesn't offer the cx11 in the US
     - name: Vpn server with location in the US
-      set_fact:
+      ansible.builtin.set_fact:
         server_type: cpx11  # cpx11, cpx21, cx11, cpx41
         server_firewall: VpnFirewall
         server_ssh_key: vpn_ssh_key
@@ -63,14 +65,14 @@
         or (server_location == "hil")
 
     - name: Minecraft server
-      set_fact:
+      ansible.builtin.set_fact:
         server_type: cpx21  # cpx11, cpx21, cx11, cpx41
         server_firewall: MinecraftFirewall
         server_ssh_key: minecraft_ssh_key
       when: server_name == "minecraft"
 
     - name: Print server configuration
-      debug:
+      ansible.builtin.debug:
         msg:
           - "Server type: {{ server_name }}"
           - "Server location: {{ server_location }}"
@@ -79,6 +81,7 @@
           - "Server ssh-key: {{ server_ssh_key }}"
 
     - name: Create firewall and ssh key for vpn server
+      when: server_name == "vpn"
       block:
         - name: Create a firewall for vpn server
           hetzner.hcloud.hcloud_firewall:
@@ -113,7 +116,7 @@
             type: ed25519
 
         - name: Read in vpn ssh key
-          shell: |
+          ansible.builtin.shell: |
             cat /root/.ssh/vpn_ssh_key.pub
           register: public_vpn_ssh_key
           changed_when: false
@@ -132,9 +135,9 @@
             public_key: "{{ public_vpn_ssh_key.stdout }}"
             state: present
           changed_when: false
-      when: server_name == "vpn"
 
     - name: Create firewall and ssh key for minecraft server
+      when: server_name == "minecraft"
       block:
         - name: Create a firewall for minecraft server
           hetzner.hcloud.hcloud_firewall:
@@ -169,7 +172,7 @@
             type: ed25519
 
         - name: Read in minecraft ssh key
-          shell: |
+          ansible.builtin.shell: |
             cat /root/.ssh/minecraft_ssh_key.pub
           register: public_minecraft_ssh_key
           changed_when: false
@@ -188,7 +191,6 @@
             public_key: "{{ public_minecraft_ssh_key.stdout }}"
             state: present
           changed_when: false
-      when: server_name == "minecraft"
 
     - name: Delete already existing server when the location differs
       hetzner.hcloud.hcloud_server:
@@ -213,13 +215,13 @@
         state: present
 
     - name: Gather server info after server creation
-      hcloud_server_info:
+      hetzner.hcloud.hcloud_server_info:
         name: "{{ server_name }}"  # vpn or minecraft
         api_token: "{{ hetzner_token }}"
       register: server_info_after_creation
 
     - name: Print server info after server creation
-      debug:
+      ansible.builtin.debug:
         var: server_info_after_creation
 
     # the script duck.sh updates the "current ip" entry
@@ -227,7 +229,7 @@
     - name:
         Update ip address for duckdns {{ vpn_server_domain }}.duckdns.org
         -> {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}
-      shell:  # noqa 305
+      ansible.builtin.shell:  # noqa 305
         "/home/duck.sh
         {{ vpn_server_domain }}
         {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}"
@@ -239,7 +241,7 @@
     - name:
         Update ip address for duckdns {{ minecraft_server_domain }}.duckdns.org
         -> {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}
-      shell:  # noqa 305
+      ansible.builtin.shell:  # noqa 305
         "/home/duck.sh
         {{ minecraft_server_domain }}
         {{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}"
@@ -249,7 +251,7 @@
     # For more info look at
     # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/wait_for_module.html#parameter-timeout
     - name: Check every 3 second if ssh is available (maximal 300 seconds)
-      wait_for:
+      ansible.builtin.wait_for:
         port: 22
         host:
           '{{ server_info_after_creation.hcloud_server_info[0].ipv4_address }}'
@@ -258,5 +260,5 @@
       register: ssh_connection
 
     - name: Print ssh connection
-      debug:
+      ansible.builtin.debug:
         msg: "{{ ssh_connection }}"
