change working directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install test dependencies
         run: pip3 install ansible molecule[docker] docker yamllint ansible-lint
 
-      - name: Run Molecule tests
+      - name: Run Molecule lint
         working-directory: ./hetzner_server_management
         run: molecule lint
         env:
@@ -47,7 +47,8 @@ jobs:
         run: pip3 install ansible molecule[docker] docker
 
       - name: Run Molecule tests
-        run: molecule test
+        working-directory: ./hetzner_server_management
+        run: hetznerToken=${{ secrets.HETZNER_TOKEN }} molecule test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
