--- a/hetzner_server_management/molecule/default/converge.yml
+++ b/hetzner_server_management/molecule/default/converge.yml
@@ -14,7 +14,8 @@
     - name: Copy duck.sh to container
       ansible.builtin.shell:  # noqa 305
         docker cp
-        ${{ github.workspace }}/hetzner_server_management/molecule/default/duck.sh
+        ${{
+        github.workspace }}/hetzner_server_management/molecule/default/duck.sh
         molecule-test-bot:/home
       changed_when: false
 
