use root rights to write to /etc/ssh/ssh_config

--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -20,6 +20,7 @@
     group: root
     mode: 0600
     force: yes
+  become: true
 
 - name: Gather server info before potential server creation
   hetzner.hcloud.hcloud_server_info:
