--- a/hetzner_server_management/create_server/inventory.yml
+++ b/hetzner_server_management/create_server/inventory.yml
@@ -15,3 +15,4 @@ hetzner:
       ansible_user: root
       ansible_connection: ssh
       ansible_ssh_private_key_file: /root/.ssh/minecraft_ssh_key
+  ansible_python_interpreter: /usr/bin/python3
