--- a/hetzner_server_management/molecule/default/prepare.yml
+++ b/hetzner_server_management/molecule/default/prepare.yml
@@ -1,7 +1,7 @@
 ---
 - name: Prepare
   hosts: localhost
-  # become: yes
+  become: true
   gather_facts: no
   tasks:
     - name: Install wireguard
