--- a/hetzner_server_management/create_server/inventory.yml
+++ b/hetzner_server_management/create_server/inventory.yml
@@ -7,11 +7,11 @@ hetzner:
         'duckdns_domain_vpn') }}.duckdns.org"
       ansible_user: root
       ansible_connection: ssh
-      ansible_ssh_private_key_file: /root/.ssh/vpn_ssh_key
+      ansible_ssh_private_key_file: "{{ lookup('ansible.builtin.env', 'GITHUB_WORKSPACE') }}/.ssh/vpn_ssh_key"
     hetzner_minecraft:
       ansible_host:
         "{{ lookup('ansible.builtin.env',
         'duckdns_domain_minecraft') }}.duckdns.org"
       ansible_user: root
       ansible_connection: ssh
-      ansible_ssh_private_key_file: /root/.ssh/minecraft_ssh_key
+      ansible_ssh_private_key_file: "{{ lookup('ansible.builtin.env', 'GITHUB_WORKSPACE') }}/.ssh/minecraft_ssh_key"
